5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4342/executions/1764_1580.log
== TEST (2019-05-30 00:24:26) 
-- CODE:
from numpy import *

notas=array(eval(input("notas:")))
nome=array(eval(input("nomes:"))
i=0
s=0 #faltosos
z=0 #aprovados
x=0 #reprovados
c=0 #maior nota
 
while(notas[i] !=max(notas)):
		i=i+1	 
print(nome[i])
-- ERROR:
File "XXXX", line 5
    i=0
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 00:24:58) 
-- CODE:
from numpy import *

notas=array(eval(input("notas:")))
nome=array(eval(input("nomes:")))
i=0
s=0 #faltosos
z=0 #aprovados
x=0 #reprovados
c=0 #maior nota
 
while(notas[i] !=max(notas)):
		i=i+1	 
print(nome[i])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 00:28:28) 
-- CODE:
from numpy import *

notas=array(eval(input("notas:")))
nome=array(eval(input("nomes:")))
i=0
s=0 #faltosos
z=0 #aprovados
x=0 #reprovados
c=0 #maior nota
 
while(notas[i]>0):
	s=s+1
	

	
while(notas[i] !=max(notas)):
		i=i+1	 
print(nome[i])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 00:28:55) 
-- CODE:
from numpy import *

notas=array(eval(input("notas:")))
nome=array(eval(input("nomes:")))
i=0
s=0 #faltosos
z=0 #aprovados
x=0 #reprovados
c=0 #maior nota
 
while(notas[i]>0):
	s=s+1
print(s)

	
while(notas[i] !=max(notas)):
		i=i+1	 
print(nome[i])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 00:29:13) 
-- CODE:
from numpy import *

notas=array(eval(input("notas:")))
nome=array(eval(input("nomes:")))
i=0
s=0 #faltosos
z=0 #aprovados
x=0 #reprovados
c=0 #maior nota
 
while(notas[i]>=0):
	s=s+1
print(s)

	
while(notas[i] !=max(notas)):
		i=i+1	 
print(nome[i])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 00:31:17) 
-- CODE:
from numpy import *

notas=array(eval(input("notas:")))
nome=array(eval(input("nomes:")))
i=0
s=0 #faltosos
z=0 #aprovados
x=0 #reprovados
c=0 #maior nota
 
while(notas[i]>=0):
	s=s+1
	i=i+1
print(s)

	
while(notas[i] !=max(notas)):
		i=i+1	 
print(nome[i])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 00:33:03) 
-- CODE:
from numpy import *

notas=array(eval(input("notas:")))
nome=array(eval(input("nomes:")))
i=0
s=0 #faltosos
z=0 #aprovados
x=0 #reprovados
c=0 #maior nota
 
while(notas>=0):
	s=s+1
	i=i+1
print(s)

	
while(notas[i] !=max(notas)):
		i=i+1	 
print(nome[i])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 00:33:15) 
-- CODE:
from numpy import *

notas=array(eval(input("notas:")))
nome=array(eval(input("nomes:")))
i=0
s=0 #faltosos
z=0 #aprovados
x=0 #reprovados
c=0 #maior nota
 
while(notas>=0):
	s=s+1
	i=i+1
print(s)

	
while(notas[i] !=max(notas)):
		i=i+1	 
print(nome[i])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 00:34:21) 
-- CODE:
from numpy import *

notas=array(eval(input("notas:")))
nome=array(eval(input("nomes:")))
i=0
s=0 #faltosos
z=0 #aprovados
x=0 #reprovados
c=0 #maior nota
 
while(notas[s]>=0):
	s=s+1
	
print(s)

	
while(notas[i] !=max(notas)):
		i=i+1	 
print(nome[i])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 15:54:21) 
-- CODE:
from numpy import *

notas=array(eval(input("notas:")))
nome=array(eval(input("nomes:")))
i=0
s=0 #faltosos
z=0 #aprovados
x=0 #reprovados
c=0 #maior nota
 
while(notas[s]>=0):
	if( i <0 ):
	s=s+1
i=i+1
print(s)

	
while(notas[i] !=max(notas)):
		i=i+1	 
print(nome[i])
-- ERROR:
File "XXXX", line 13
    s=s+1
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
